--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,26 +15,26 @@ pool:
 
 # Set variables once as shown below, use the UI ee
 variables:
-  CMA_APPLICATION_NAME: IoT_API_Demo
-  CMA_CONTROLLER_HOST: configmyappdemo-20103n-m3lp0zmi.appd-cx.com
+  CMA_APPLICATION_NAME: IoT_API
+  CMA_CONTROLLER_HOST: nbsdemo-2120nosshcontr-chvgikps.appd-cloudmachine.com
   CMA_CONTROLLER_PORT: 8090
   CMA_ACCOUNT: customer1
   CMA_USE_HTTPS: false
   CMA_USERNAME: appd
   CMA_PASSWORD: appd
-  CMA_CONFIGURE_BT: false
-  CMA_INCLUDE_SIM: false
+  CMA_CONFIGURE_BT: true
+  CMA_INCLUDE_SIM: true
   CMA_BT_ONLY: false
-  CMA_INCLUDE_DATABASE : false
+  CMA_INCLUDE_DATABASE : true
   CMA_OVERWRITE_HEALTH_RULES: false
   CMA_DATABASE_NAME: ConfigMyApp
   CMA_USE_BRANDING: false
-  CMA_UPLOAD_DEFAULT_DASHBOARD: false
-  CMA_HEALTH_RULES_ONLY: false
+  CMA_UPLOAD_DEFAULT_DASHBOARD: true
+  CMA_HEALTH_RULES_ONLY: true
 
-  CMA_RBAC_ONLY: true
+  CMA_RBAC_ONLY: false
   CMA_RBAC_ACTION: "license-rule"
-  CMA_RBAC_LICENSE_RULE_NAME: iot-pipeline
+  CMA_RBAC_LICENSE_RULE_NAME: pipeline
 steps:
 - script: |
     # Write your commands here
@@ -46,12 +46,10 @@ steps:
         
     LOCATION=$(git clone --single-branch --branch features/rbac https://github.com/Appdynamics/ConfigMyApp.git)
 
-    pwd
-    ls -ltr
     cd ConfigMyApp/
 
-    echo "Remove all apps rule"
-    rm ./rbac/restui_license_rules_files/payload_all.json 
+    # echo "Remove all apps rule"
+    # rm ./rbac/restui_license_rules_files/payload_all.json 
 
     pwd
     ls -ltr
@@ -101,6 +99,7 @@ steps:
   displayName: 'Run ConfigMyApp'
   env:
     CMA_PASSWORD: $(CMA_PASSWORD)
+    CMA_USERNAME: $(CMA_USERNAME)
     CMA_APPLICATION_NAME: $(CMA_APPLICATION_NAME)
     CMA_INCLUDE_SIM: $(CMA_INCLUDE_SIM)
     CMA_CONFIGURE_BT: $(CMA_CONFIGURE_BT)
