--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -79,7 +79,7 @@ steps:
     if [ "$CMA_BT_ONLY" = true ] || [ "$CMA_CONFIGURE_BT" = true ]; then
       echo "Copying business transaction rules..."
       cp ../bt_config/$CMA_APPLICATION_NAME-configBT.json bt_config/configBT.json
-      ./start.sh  --include-database --database-name="$CMA_DATABASE_NAME" --no-upload-default-dashboard --no-health-rules-only
+      ./start.sh  --include-database --database-name="$CMA_DATABASE_NAME" --no-upload-default-dashboard --no-health-rules-only --no-rbac-only
     fi
     
     echo CMA_HEALTH_RULES_ONLY = $CMA_HEALTH_RULES_ONLY
@@ -88,13 +88,13 @@ steps:
       echo "Copying health rules files..."
       cp -r ../healthrules/${CMA_APPLICATION_NAME}/* health_rules/
       ls health_rules/
-      ./start.sh --health-rules-only --no-bt-only --no-upload-default-dashboard
+      ./start.sh --health-rules-only --no-bt-only --no-upload-default-dashboard --no-rbac-only
     fi
 
     echo CMA_UPLOAD_DEFAULT_DASHBOARD = $CMA_UPLOAD_DEFAULT_DASHBOARD
     
     if [ "$CMA_UPLOAD_DEFAULT_DASHBOARD" = true ]; then
-      ./start.sh --no-health-rules-only --no-bt-only --logo-name="logo-white.png" --background-name="background.jpg" 
+      ./start.sh --no-health-rules-only --no-bt-only --logo-name="logo-white.png" --background-name="background.jpg" --no-rbac-only
     fi
 
     echo CMA_RBAC_ONLY = $CMA_RBAC_ONLY
