--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,8 +15,8 @@ pool:
 
 # Set variables once as shown below, use the UI ee
 variables:
-  CMA_APPLICATION_NAME: IoT_API
-  CMA_CONTROLLER_HOST: nbsdemo-2120nosshcontr-chvgikps.appd-cloudmachine.com
+  CMA_APPLICATION_NAME: IoT_API_Demo
+  CMA_CONTROLLER_HOST: configmyappdemo-20103n-m3lp0zmi.appd-cx.com
   CMA_CONTROLLER_PORT: 8090
   CMA_ACCOUNT: customer1
   CMA_USE_HTTPS: false
@@ -26,7 +26,7 @@ variables:
   CMA_CONFIGURE_BT: true
   CMA_BT_ONLY: true
 
-  CMA_INCLUDE_DATABASE : true
+  CMA_INCLUDE_DATABASE : false
   CMA_INCLUDE_SIM: true
   CMA_DATABASE_NAME: ConfigMyApp
   CMA_USE_BRANDING: true
