--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,18 +42,18 @@ steps:
 - script: |
     # Write your commands here
     
-    LOCATION=$(curl -s https://api.github.com/repos/Appdynamics/ConfigMyApp/releases/latest \
-                | grep "tag_name" \
-                | awk '{print "https://github.com/Appdynamics/ConfigMyApp/archive/" substr($2, 2, length($2)-3) ".zip"}') \
-                ; curl -L -o ConfigMyApp.zip $LOCATION
+    # LOCATION=$(curl -s https://api.github.com/repos/Appdynamics/ConfigMyApp/releases/latest \
+    #             | grep "tag_name" \
+    #             | awk '{print "https://github.com/Appdynamics/ConfigMyApp/archive/" substr($2, 2, length($2)-3) ".zip"}') \
+    #             ; curl -L -o ConfigMyApp.zip $LOCATION
         
-    # LOCATION=$(git clone --single-branch --branch features/rbac https://github.com/Appdynamics/ConfigMyApp.git)
+    LOCATION=$(git clone --single-branch --branch features/rbac https://github.com/Appdynamics/ConfigMyApp.git)
 
     cd ConfigMyApp/
 
     echo "Remove all apps rule"
     rm ./rbac/restui_license_rules_files/payload_all.json 
-    
+
 
     pwd
     ls -ltr
